WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274332
textarea vertical scrollbar handling isn't writing mode aware
https://bugs.webkit.org/show_bug.cgi?id=274332
Summary
textarea vertical scrollbar handling isn't writing mode aware
Luke Warlow
Reported
2024-05-17 13:30:56 PDT
If you load data:text/html,<textarea rows="1" style="writing-mode: vertical-lr;"></textarea><textarea rows="1" style="overflow-x: hidden; writing-mode: vertical-lr;"></textarea> you see two equally tall textareas. The second one should be shorter. (There's a separate bug where overlay scrollbar thickness is taken into account)
Attachments
Add attachment
proposed patch, testcase, etc.
Luke Warlow
Comment 1
2024-05-17 14:27:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28733
EWS
Comment 2
2024-05-22 13:30:36 PDT
Committed
279150@main
(708db469479b): <
https://commits.webkit.org/279150@main
> Reviewed commits have been landed. Closing PR #28733 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-22 13:31:13 PDT
<
rdar://problem/128562554
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug