textarea's width calculations aren't fully writing mode aware https://bugs.webkit.org/show_bug.cgi?id=274332

Reviewed by Aditya Keerthi.

Updates the width cacluations to take into account writing mode when decided whether to add scrollbar thickness.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/textarea-scrollbar-sizing-002-expected.txt:
* Source/WebCore/rendering/RenderTextControlMultiLine.cpp:
(WebCore::RenderTextControlMultiLine::preferredContentLogicalWidth const):

Canonical link: https://commits.webkit.org/279150@main